Title Update Fixed Text Overflow

--- a/homepage.css
+++ b/homepage.css
@@ -65,10 +65,10 @@ ul.nav a:hover {
 
 .frontbanner h1{
 	font-family: 'Lato', sans-serif;
-	font-size: 70px;
+	font-size: 60px;
   font-weight: 300;
 	color: white;
-	margin-top: 70px;
+	margin-top: 0px;
   margin-bottom: 10px;
 	color: white;
 
@@ -491,6 +491,10 @@ label.light {
 
   form {
     max-width: 480px;
+  }
+  .frontbanner h1{
+  font-size: 70px;
+  margin-top: 70px;
   }
 
 }
